--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcas Jeans Skinny</title>
+    <title>Calcas Jeans Aires atualizar</title>
     
     
 </head>
@@ -387,5 +387,6 @@ function showImg(pic){bigImg.src=pic;}
 
 
 </script>
+
 
 </html>
