--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
       <div class="right">
           <div class="url">Home > Product > Calça  Jeans Skinny</div> 
-          <div class="pname">Calça Jeans Skinny com bolso  <br> e Ziper</div>
+          <div class="pname"> aires  <br> e Ziper</div>
           <div class="price"> <p> <b class="antes">Antes</b> <s>4500</s> MZN</p> <br> <p><b class="agora">Agora</b> 
             <b class="bprice">3500 </b> MZN  </p></div>
           
@@ -390,3 +390,4 @@ function showImg(pic){bigImg.src=pic;}
 
 
 </html>
+
